test/sema/assign-to-rvalue.delta.output
assign-to-rvalue.delta:5:5: error: expression is not assignable
    1 = 2;
    ^
