test/sema/assign-to-rvalue.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:5: error: expression is not assignable
    1 = 2;
}
